Small fixes   - Align tip icons in sidebar   - Add INBOX fallback to boards reducer when converting cards from github service

--- a/app/components/UI/Button.scss
+++ b/app/components/UI/Button.scss
@@ -4,7 +4,6 @@ button.button {
   padding: 5px;
   margin: 5px 0;
   svg {
-    margin: 0 5px;
     vertical-align: middle;
   }
 }
